# tummytap-django-react

./: .gitignore  README.md
backend/: pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_customuser_is_verified.py  0003_customuser_name_customuser_phone_and_more.py
backend/config/: settings.py  urls.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_deliveryslot_dietplan_specialevent_tag_and_more.py  0003_remove_product_tags_delete_tag_product_tags.py  0004_cartitem_added_at.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: Layout.jsx  Navbar.jsx  ProductCard.jsx
frontend/src/components/user/: DeliveryAddressForm.jsx  DeliveryAddressList.jsx
frontend/src/context/: AppContext.jsx  AuthContext.jsx  CartContext.jsx  ThemeContext.jsx
frontend/src/pages/: Cart.jsx  Checkout.jsx  Home.jsx  Login.jsx  Register.jsx  UserProfilePage.jsx  VerifyOTP.jsx
frontend/src/utils/: api.js  axiosInstance.js
frontend/styles/: navbar.css
